@@ -15,22 +15,12 @@
 	Copyright 1998-2007 by Bill Spitzak and others.</P>
 	</TD>
 </TR>
-</TABLE>
-
-<TABLE BGCOLOR="#9f9f9f" CELLPADDING="8" CELLSPACING="0" SUMMARY="TITLE BAR" WIDTH="700">
 <TR>
-	<TD ALIGN="CENTER">
-        <B>This software and manual are
-	provided under the terms of the GNU Library General
-	Public License.
-        Permission is granted to reproduce this manual or any portion 
-        for any purpose, provided this copyright and permission notice 
-        are preserved.</B>
-	</TD>
+	<TH COLSPAN=2>This software and manual are provided under the terms of the GNU Library General Public License. Permission is granted to reproduce this manual or any portion for any purpose, provided this copyright and permission notice are preserved.</TH>
 </TR>
 </TABLE>
 
-<TABLE COLS="2" BGCOLOR="#9f9fef" CELLPADDING="8" CELLSPACING="0" SUMMARY="Table of Contents" WIDTH="700">
+<TABLE BGCOLOR="#9f9fef" CELLPADDING="8" CELLSPACING="0" SUMMARY="Table of Contents" WIDTH="700">
 <TR>
 	<TD ALIGN="LEFT" VALIGN="TOP"><B><A HREF="preface.html#preface">Preface</A></B>
 	<BR>
